# FIDI-comp

./: .gitignore  CMakeLists.txt  FIDIComp.jucer  LICENSE  README.md  claude.md
Source/: Compressor.cpp  Compressor.h  LookAndFeel.cpp  LookAndFeel.h  Meter.cpp  Meter.h  Parameters.cpp  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
